- bios/acsi.c bios/acsi.h bios/xhdi.c: XHInqTarget()/XHInqTarget2() now
  report error if selected ACSI drive is not present. (RFB)

2013-09-23
- bios/acsi.c: Support drives >1GB on ACSI interface. (RFB)
- bios/acsi.c: Retrieve status properly for all ACSI commands. (RFB)
- bios/acsi.c bios/acsi.h bios/xhdi.c doc/xhdi.txt: XHGetCapacity() is
  now supported for ACSI devices. (RFB)

2013-09-24
- bios/linea.S vdi/vdi_blit.S vdi/vdi_raster.c: Added Line-A bitblit & textblit
  support. Contributed by Eero Tamminen. (VRI)
- bios/linea.S vdi/vdi_bezier.c vdi/vdi_defs.h vdi/vdi_fill.c vdi/vdi_line.c
  vdi/vdi_text.c: Added support for Line-A hline/line/fillrect. Contributed
  by Eero Tamminen. (VRI)
- vdi/vdi_line.c: Improved linea_color() performance. Contributed by David
  Savinkoff. (VRI)

2013-09-25
- vdi/vdi_raster.c: Fixed "make firebee". Contributed by Eero Tamminen. (VRI)
- vdi/vdi_line.c: Improved linea_color() performance again. Contributed by David
  Savinkoff. (VRI)
- bios/disk.c: Improved determination of disk capacity & blocksize. (RFB)
- bios/disk.c: Circumvent Hatari bug in handling Read Capacity command. (RFB)

2013-10-04
- bios/blkdev.c bios/ide.c bios/ide.h bios/mfp.h: Updated IDE code to
  follow official PIO data transfer diagrams. (RFB)

2013-10-08
- bios/amiga.h bios/ide.c: Fixed Amiga compilation. (VRI)

2013-10-10
- bios/ide.c include/asm.h: Use 32-bit IDE transfer width for non-548x
  hardware. (RFB)

2013-10-23
- bios/ide.c: Support up to 4 IDE interfaces. (RFB)
- bios/ide.c: Code cleanup: use 'interface' instead of 'bus' within IDE
  code to avoid confusion. (RFB)

2013-10-24
- bios/ide.c bios/ide.h bios/xhdi.c: Disk capacity is now obtained from
  IDE devices. (RFB)
- bios/ide.c: Code cleanup: remove residual ENABLE_KDEBUG; use the same
  pattern of args for read & write routines. (RFB)

2013-10-25
- bios/ide.c bios/ide.h bios/xhdi.c: For IDE, XHInqTarget/XHInqTarget2
  now return actual product name. (RFB)