@@ -5043,3 +5043,7 @@ Start... early ages
 2013-10-25
 - bios/ide.c bios/ide.h bios/xhdi.c: For IDE, XHInqTarget/XHInqTarget2
   now return actual product name. (RFB)
+
+2013-10-28
+- bios/ide.c: Use Read/Write Multiple instead of Read/Write Sector
+  commands, where possible. (RFB)
